Minor tofu / experiment changes: - made H3 text bigger - made H2 color darker and more readable against the light background - little spacing fixes in the tofu html - added a missing chef's tip callout box - changed sizing of text on tofu's final page

--- a/Source/Young Chefs/Young Chefs/WebResources/styles.css
+++ b/Source/Young Chefs/Young Chefs/WebResources/styles.css
@@ -132,7 +132,7 @@ h1 {
 }
 
 h2 {
-	color: #c6c6c6;
+	color: #616161;
 	font-size: 90%;
 	font-style: italic;
 	font-weight: inherit;
@@ -141,7 +141,7 @@ h2 {
 
 h3 {
 	font-weight: inherit;
-	font-size: 70%;
+	font-size: 80%;
 	text-decoration: underline;
 	color: black;
 	margin-bottom: 5px;
